--- a/index.css
+++ b/index.css
@@ -197,8 +197,100 @@ p {
   flex-direction: column;
   align-items: left;
   padding: 24px 100px;
+  gap: 24px;
 }
 
 .page-title-secondary {
   color: var(--background-color);
+}
+
+.profile-img {
+  width: 310px;
+  height: 230px;
+  border-radius: 16px;
+  object-fit: cover;
+}
+
+.intro-container {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  align-items: center;
+}
+
+.intro-description {
+  color: var(--background-color);
+  line-height: 180%;
+}
+
+.review-section {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding: 60px 100px;
+  gap: 24px;
+  color: var(--background-color);
+}
+
+.review-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  flex-direction: column;
+  gap: 24px;
+}
+
+.review-card {
+  display: flex;
+  flex-direction: column;
+  color: var(--card-color);
+  border-radius: 8px;
+  gap: 16px;
+}
+
+.profile-detail {
+  display: flex;
+  gap: 8px;
+  width: 100%;
+}
+
+.reviewer-photo {
+  width: 70px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.name-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  align-items: center;
+  align-content: center;
+  gap: 8px;
+}
+
+.name {
+  max-width: fit-content;
+  padding: 0px;
+}
+
+.profession {
+  max-width: fit-content;
+  padding: 0px;
+}
+
+.john-doe {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.professionn {
+  font-size: 12px;
+  font-weight: 200;
+  max-width: fit-content;
+}
+
+.review-description {
+  font-size: 12px;
+  font-weight: 400;
 }
