--- a/index.css
+++ b/index.css
@@ -33,6 +33,13 @@ li {
   gap: 24px;
   color: var(--primary-color);
 }
+
+.hamburger-menu {
+  display: none;
+  width: 24px;
+  height: 24px;
+}
+
 .nav-items li:hover {
   background-color: #dedbfb;
   padding: 8px 16px;
@@ -224,12 +231,12 @@ p {
 }
 
 .review-section {
+  /* color: var(--background-color); */
   display: flex;
   flex-direction: column;
   align-items: left;
   padding: 60px 100px;
   gap: 24px;
-  color: var(--background-color);
 }
 
 .review-list {
@@ -240,11 +247,12 @@ p {
 }
 
 .review-card {
+  background-color: var(--card-color);
   display: flex;
   flex-direction: column;
-  color: var(--card-color);
   border-radius: 8px;
   gap: 16px;
+  border: 1px solid #8ea0e3;
 }
 
 .profile-detail {
@@ -293,4 +301,78 @@ p {
 .review-description {
   font-size: 12px;
   font-weight: 400;
+}
+
+@media only screen and (max-width: 600px) {
+  .nav-items {
+    display: none;
+    align-items: center;
+    gap: 24px;
+    color: var(--primary-color);
+  }
+  .navbar {
+    padding: 24px 24px;
+  }
+  .hamburger-menu {
+    display: block;
+  }
+  .hero-section {
+    padding: 24px 24px;
+  }
+  .hero-img {
+    width: 50%;
+    height: 50%;
+  }
+  h1 {
+    font-size: 26px;
+  }
+  .hero-card {
+    gap: 60px;
+    padding: 21px 55px;
+  }
+  .img-text {
+    font-size: 14px;
+  }
+  .work-section {
+    padding: 24px 24px;
+  }
+  .case-study-list {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 0px;
+  }
+  h4 {
+    font-size: 24px;
+  }
+  .card-description {
+    font-size: 14px;
+  }
+  .card-label {
+    font-size: 12px;
+  }
+  .intro-section {
+    padding: 24px;
+  }
+  .intro-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .intro-description {
+    font-size: 14px;
+  }
+  .profile-img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  .review-section {
+    padding: 24px;
+  }
+  .review-list {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .review-card {
+    padding: 16px 16px;
+  }
 }
